code added for threeDE POSITION remember

--- a/testing/index.html
+++ b/testing/index.html
@@ -1,64 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Custom Cursor</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            min-height: 200vh; /* For scroll testing */
-        }
+        * {
+    cursor: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        .cta-container {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-            background: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0.9));
-            transform: translateY(100%);
-            opacity: 0;
-            transition: transform 0.6s ease-out, opacity 0.6s ease-out;
-        }
+body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #121212;
+    color: white;
+    font-family: Arial, sans-serif;
+}
 
-        .cta-container.visible {
-            transform: translateY(0);
-            opacity: 1;
-        }
+/* Custom Cursor */
+.custom-cursor {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: transform 0.2s ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    backdrop-filter: blur(10px);
+}
 
-        .cta-button {
-            background-color: #0071e3;
-            color: white;
-            border: none;
-            border-radius: 980px;
-            padding: 12px 24px;
-            font-size: 17px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+/* Inner cursor text */
+.cursor-inner {
+    opacity: 0;
+    transition: opacity 0.2s ease-out;
+}
 
-        .cta-button:hover {
-            background-color: #0077ED;
-        }
+/* Hover area */
+.hover-area {
+    padding: 50px;
+    border: 2px dashed white;
+    text-align: center;
+    font-size: 24px;
+}
+
+/* Cursor effect on hover */
+.hover-area:hover ~ .custom-cursor {
+    width: 100px;
+    height: 100px;
+    transform: translate(-50%, -50%) scale(1.2) rotate(15deg);
+}
+
+.hover-area:hover ~ .custom-cursor .cursor-inner {
+    opacity: 1;
+}
+
     </style>
 </head>
 <body>
-    <div class="cta-container">
-        <button class="cta-button">Buy Now</button>
+
+    <div class="custom-cursor">
+        <div class="cursor-inner">
+            <span class="cursor-text">Explore</span>
+        </div>
     </div>
 
-    <script>
-        // Show CTA after scrolling 100px
-        window.addEventListener('scroll', function() {
-            const ctaContainer = document.querySelector('.cta-container');
-            if (window.scrollY > 100) {
-                ctaContainer.classList.add('visible');
-            } else {
-                ctaContainer.classList.remove('visible');
-            }
-        });
+    <div class="hover-area">
+        Hover over me
+    </div>
+
+    <script >
+        document.addEventListener("DOMContentLoaded", () => {
+    const cursor = document.querySelector(".custom-cursor");
+
+    document.addEventListener("mousemove", (e) => {
+        cursor.style.left = `${e.clientX}px`;
+        cursor.style.top = `${e.clientY}px`;
+    });
+});
+
     </script>
 </body>
 </html>
